# BrainWaves

./: BrainWaves.mlapp  BrainWaves.prj  CMakeLists.txt  DialogBatchSelector.mlapp  DialogPowerSpectrum.mlapp  DialogShowLFP.mlapp  README.md
BrainWaves/: PackagingLog.html
BrainWaves/for_testing/: readme.txt  requiredMCRProducts.txt
Functions/: BW_callLFP.m  callLFP.m  dsLFP.m  normLFP.m  straightenCSC.m
Functions/nlx_in_matlab_win/: Mat2NlxST.m  Nlx2MatCSC.mexw32  Nlx2MatNRD.m  miss_timestamp.m
Functions/unix_matlab_functions/: Nlx2MatNRD.m  miss_timestamp.m
Functions/win_matlab_functions/: extract_to_ants.m
Resources/: resource_images.pptx
