cmake_minimum_required(VERSION 3.26)
project(BrainWaves)

set(CMAKE_CXX_STANDARD 14)

include_directories(Functions/nlx_in_matlab_unix/source)

add_executable(BrainWaves
        Functions/nlx_in_matlab_unix/binaries/Mat2NlxCSC.mexa64
        Functions/nlx_in_matlab_unix/binaries/Mat2NlxCSC.mexmaci64
        Functions/nlx_in_matlab_unix/binaries/Mat2NlxEV.mexa64
        Functions/nlx_in_matlab_unix/binaries/Mat2NlxEV.mexmaci64
        Functions/nlx_in_matlab_unix/binaries/Mat2NlxSE.mexa64
        Functions/nlx_in_matlab_unix/binaries/Mat2NlxSE.mexmaci64
        Functions/nlx_in_matlab_unix/binaries/Mat2NlxTT.mexa64
        Functions/nlx_in_matlab_unix/binaries/Mat2NlxTT.mexmaci64
        Functions/nlx_in_matlab_unix/binaries/Nlx2MatCSC_v3.mexa64
        Functions/nlx_in_matlab_unix/binaries/Nlx2MatCSC_v3.mexmaci64
        Functions/nlx_in_matlab_unix/binaries/Nlx2MatEV_v3.mexa64
        Functions/nlx_in_matlab_unix/binaries/Nlx2MatEV_v3.mexmaci64
        Functions/nlx_in_matlab_unix/binaries/Nlx2MatSpike_v3.mexa64
        Functions/nlx_in_matlab_unix/binaries/Nlx2MatSpike_v3.mexmaci64
        Functions/nlx_in_matlab_unix/binaries/Nlx2MatVT_v3.mexa64
        Functions/nlx_in_matlab_unix/binaries/Nlx2MatVT_v3.mexmaci64
        Functions/nlx_in_matlab_unix/source/compatibility.h
        Functions/nlx_in_matlab_unix/source/compatibility32.h
        Functions/nlx_in_matlab_unix/source/compatibility64.h
        Functions/nlx_in_matlab_unix/source/FileDataBucket.cpp
        Functions/nlx_in_matlab_unix/source/FileDataBucket.h
        Functions/nlx_in_matlab_unix/source/GeneralOperations.cpp
        Functions/nlx_in_matlab_unix/source/GeneralOperations.h
        Functions/nlx_in_matlab_unix/source/Mat2NlxCSC.cpp
        Functions/nlx_in_matlab_unix/source/Mat2NlxEV.cpp
        Functions/nlx_in_matlab_unix/source/Mat2NlxSE.cpp
        Functions/nlx_in_matlab_unix/source/Mat2NlxTT.cpp
        Functions/nlx_in_matlab_unix/source/Nlx2MatCSC.cpp
        Functions/nlx_in_matlab_unix/source/Nlx2MatEV.cpp
        Functions/nlx_in_matlab_unix/source/Nlx2MatEVInclude.h
        Functions/nlx_in_matlab_unix/source/Nlx2MatSpike.cpp
        Functions/nlx_in_matlab_unix/source/Nlx2MatVt.cpp
        Functions/nlx_in_matlab_unix/source/Nlx2MatVTInclude.h
        Functions/nlx_in_matlab_unix/source/Nlx_Code.cpp
        Functions/nlx_in_matlab_unix/source/Nlx_Code.h
        Functions/nlx_in_matlab_unix/source/Nlx_DataTypes.h
        Functions/nlx_in_matlab_unix/source/Nlx_Error.h
        Functions/nlx_in_matlab_unix/source/Nlx_ObjNames.h
        Functions/nlx_in_matlab_unix/source/ProcessorCSC.cpp
        Functions/nlx_in_matlab_unix/source/ProcessorCSC.h
        Functions/nlx_in_matlab_unix/source/ProcessorEV.cpp
        Functions/nlx_in_matlab_unix/source/ProcessorEV.h
        Functions/nlx_in_matlab_unix/source/ProcessorSpike.cpp
        Functions/nlx_in_matlab_unix/source/ProcessorSpike.h
        Functions/nlx_in_matlab_unix/source/ProcessorVT.cpp
        Functions/nlx_in_matlab_unix/source/ProcessorVT.h
        Functions/nlx_in_matlab_unix/source/StdString.h
        Functions/nlx_in_matlab_unix/source/TimeBuf.cpp
        Functions/nlx_in_matlab_unix/source/TimeBuf.h
        Functions/nlx_in_matlab_unix/source/TimeCSCBuf.cpp
        Functions/nlx_in_matlab_unix/source/TimeEventBuf.cpp
        Functions/nlx_in_matlab_unix/source/TimeMClustTSBuf.cpp
        Functions/nlx_in_matlab_unix/source/TimeSEBuf.cpp
        Functions/nlx_in_matlab_unix/source/TimeSTBuf.cpp
        Functions/nlx_in_matlab_unix/source/TimeTSBuf.cpp
        Functions/nlx_in_matlab_unix/source/TimeTTBuf.cpp
        Functions/nlx_in_matlab_unix/source/TimeVideoBuf.cpp
        Functions/nlx_in_matlab_unix/compile.sh
        Functions/nlx_in_matlab_unix/getRawCSCData.m
        Functions/nlx_in_matlab_unix/getRawCSCTimestamps.m
        Functions/nlx_in_matlab_unix/getRawSE.m
        Functions/nlx_in_matlab_unix/getRawTTLs.m
        Functions/nlx_in_matlab_unix/Mat2NlxCSC.m
        Functions/nlx_in_matlab_unix/Mat2NlxSE.m
        Functions/nlx_in_matlab_unix/Mat2NlxTT.m
        Functions/nlx_in_matlab_unix/putRawCSC.m
        Functions/nlx_in_matlab_unix/putRawEV.m
        Functions/nlx_in_matlab_unix/putRawEV_verify.m
        Functions/nlx_in_matlab_unix/putRawTT.m
        Functions/nlx_in_matlab_unix/README)
